update index youtube video

--- a/index.html
+++ b/index.html
@@ -510,7 +510,7 @@
 								<div class="d-elem-2"><img src="assets/images/elements/pink-3.png" alt=""></div>
 								<div class="image-box">
 									<img src="assets/images/resources/misc/about-2.jpg" alt="" title="">
-									<a href="https://www.youtube.com/watch?v=ZETY_l3GVQg&autoplay=1"
+									<a href="https://www.youtube.com/watch?v=OxFOuZCokLk&autoplay=1"
 										class="lightbox-image vid-btn"><span class="icon fa fa-play"><i
 												class="ripple"></i></span></a>
 								</div>
