update tour package margin-top

--- a/tour-packages.html
+++ b/tour-packages.html
@@ -178,15 +178,7 @@
 		<!--End Banner Section -->
 
 		<!--Packages Section-->
-		<section class="packages-three">
-			<!--Serach One-->
-			<div class="search-one">
-				<div class="auto-container">
-
-				
-					
-				</div>
-			</div>
+		<section class="packages-three" style="margin-top: 80px;">
 			<div class="auto-container">
 				<div class="title-box">
 					<div class="subtitle">Packages</div>
