--- a/about.html
+++ b/about.html
@@ -7,7 +7,7 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-	<title>Travel - About Us</title>
+	<title>Marvel Voyages - About Us</title>
 
 	<link href="assets/images/favicon.png" rel="shortcut icon" type="image/x-icon">
 
@@ -295,7 +295,7 @@
 						<!-- Service 1 -->
 						<div class="col-lg-6 mb-4">
 							<div class="service-box h-100 p-3 text-center">
-								<img src="path-to-image1.jpg" alt="Personalized Itinerary Planning" class="img-fluid mb-3">
+								<!--<img src="path-to-image1.jpg" alt="Personalized Itinerary Planning" class="img-fluid mb-3">-->
 								<h4>Personalized Itinerary Planning</h4>
 								<p>Our expert team works closely with you to craft a bespoke itinerary tailored to your interests, preferences, and travel goals. Whether it's a relaxing beach holiday or an adventurous trek, we ensure that your travel experience is unique and unforgettable.</p>
 							</div>
@@ -304,7 +304,7 @@
 						<!-- Service 2 -->
 						<div class="col-lg-6 mb-4">
 							<div class="service-box h-100 p-3 text-center">
-								<img src="path-to-image2.jpg" alt="Private Guided Tours" class="img-fluid mb-3">
+								<!--<img src="path-to-image2.jpg" alt="Private Guided Tours" class="img-fluid mb-3">-->
 								<h4>Private Guided Tours</h4>
 								<p>We offer private guided tours led by knowledgeable and passionate local guides. Enjoy flexibility and convenience with a dedicated guide who ensures you get the most out of every destination.</p>
 							</div>
@@ -313,7 +313,7 @@
 						<!-- Service 3 -->
 						<div class="col-lg-6 mb-4">
 							<div class="service-box h-100 p-3 text-center">
-								<img src="path-to-image3.jpg" alt="Luxury and Boutique Accommodation" class="img-fluid mb-3">
+								<!--<img src="path-to-image3.jpg" alt="Luxury and Boutique Accommodation" class="img-fluid mb-3">-->
 								<h4>Luxury and Boutique Accommodation</h4>
 								<p>We offer a curated selection of luxury and boutique accommodation options, from beachfront resorts to charming boutique hotels, chosen for their quality, service, and authenticity.</p>
 							</div>
@@ -322,7 +322,7 @@
 						<!-- Service 4 -->
 						<div class="col-lg-6 mb-4">
 							<div class="service-box h-100 p-3 text-center">
-								<img src="path-to-image4.jpg" alt="Seamless Transportation Services" class="img-fluid mb-3">
+								<!--<img src="path-to-image4.jpg" alt="Seamless Transportation Services" class="img-fluid mb-3">-->
 								<h4>Seamless Transportation Services</h4>
 								<p>We provide private transfers and comfortable vehicles for intercity travel, ensuring a smooth and pleasant journey. Premium transport options are also available for those seeking luxury.</p>
 							</div>
@@ -331,7 +331,7 @@
 						<!-- Service 5 -->
 						<div class="col-lg-6 mb-4">
 							<div class="service-box h-100 p-3 text-center">
-								<img src="path-to-image5.jpg" alt="Cultural and Culinary Experiences" class="img-fluid mb-3">
+								<!--<img src="path-to-image5.jpg" alt="Cultural and Culinary Experiences" class="img-fluid mb-3">-->
 								<h4>Cultural and Culinary Experiences</h4>
 								<p>Immerse yourself in Sri Lanka’s rich cultural heritage with exclusive experiences, including traditional dance performances, artisan workshops, and culinary tours that showcase the unique flavors of Sri Lankan cuisine.</p>
 							</div>
@@ -340,7 +340,7 @@
 						<!-- Service 6 -->
 						<div class="col-lg-6 mb-4">
 							<div class="service-box h-100 p-3 text-center">
-								<img src="path-to-image6.jpg" alt="Wildlife Safaris and Nature Tours" class="img-fluid mb-3">
+								<!--<img src="path-to-image6.jpg" alt="Wildlife Safaris and Nature Tours" class="img-fluid mb-3">-->
 								<h4>Wildlife Safaris and Nature Tours</h4>
 								<p>Join guided safaris in renowned national parks to spot elephants, leopards, and a variety of bird species. Our nature tours also cover rainforests, hill country, and wetlands, connecting you with Sri Lanka’s natural beauty.</p>
 							</div>
@@ -349,7 +349,7 @@
 						<!-- Service 7 -->
 						<div class="col-lg-6 mb-4">
 							<div class="service-box h-100 p-3 text-center">
-								<img src="path-to-image7.jpg" alt="Wellness and Spa Retreats" class="img-fluid mb-3">
+								<!--<img src="path-to-image7.jpg" alt="Wellness and Spa Retreats" class="img-fluid mb-3">-->
 								<h4>Wellness and Spa Retreats</h4>
 								<p>Our wellness retreats offer luxurious spa treatments, yoga sessions, and wellness programs. We partner with top resorts to ensure a rejuvenating experience for body and mind.</p>
 							</div>
@@ -358,7 +358,7 @@
 						<!-- Service 8 -->
 						<div class="col-lg-6 mb-4">
 							<div class="service-box h-100 p-3 text-center">
-								<img src="path-to-image8.jpg" alt="Adventure and Outdoor Activities" class="img-fluid mb-3">
+								<!--<img src="path-to-image8.jpg" alt="Adventure and Outdoor Activities" class="img-fluid mb-3">-->
 								<h4>Adventure and Outdoor Activities</h4>
 								<p>From surfing on the south coast to trekking through the Knuckles Range or exploring marine life through scuba diving, we organize exciting adventures suited to your skill level, ensuring a safe and thrilling experience.</p>
 							</div>
@@ -367,7 +367,7 @@
 						<!-- Service 9 -->
 						<div class="col-lg-6 mb-4">
 							<div class="service-box h-100 p-3 text-center">
-								<img src="path-to-image9.jpg" alt="Family and Group Travel Services" class="img-fluid mb-3">
+								<!--<img src="path-to-image9.jpg" alt="Family and Group Travel Services" class="img-fluid mb-3">-->
 								<h4>Family and Group Travel Services</h4>
 								<p>We specialize in organizing family-friendly and group travel experiences, creating customized itineraries and ensuring accommodations and activities cater to all age groups.</p>
 							</div>
@@ -376,7 +376,7 @@
 						<!-- Service 10 -->
 						<div class="col-lg-6 mb-4">
 							<div class="service-box h-100 p-3 text-center">
-								<img src="path-to-image10.jpg" alt="24/7 Customer Support" class="img-fluid mb-3">
+								<!--<img src="path-to-image10.jpg" alt="24/7 Customer Support" class="img-fluid mb-3">-->
 								<h4>24/7 Customer Support</h4>
 								<p>Marvel Voyages offers round-the-clock customer support to assist you throughout your trip, ensuring a smooth and worry-free travel experience at all times.</p>
 							</div>
@@ -615,72 +615,7 @@
 
 			</div>
 		</div>
-
-		<!--Partners Section-->
-		<div class="partners-two">
-			<div class="auto-container">
-				<div class="title-box centered">
-					<div class="subtitle">Valuable Partners</div>
-					<h2>Our Valuable Partners</h2>
-				</div>
-				<div class="carousel-box">
-					<div class="partners-carousel">
-						<!--Block-->
-						<div class="partner-block">
-							<div class="image"><a href="#"><img src="assets/images/partners/partner-1.png" alt=""></a>
-							</div>
-						</div>
-						<!--Block-->
-						<div class="partner-block">
-							<div class="image"><a href="#"><img src="assets/images/partners/partner-2.png" alt=""></a>
-							</div>
-						</div>
-						<!--Block-->
-						<div class="partner-block">
-							<div class="image"><a href="#"><img src="assets/images/partners/partner-3.png" alt=""></a>
-							</div>
-						</div>
-						<!--Block-->
-						<div class="partner-block">
-							<div class="image"><a href="#"><img src="assets/images/partners/partner-4.png" alt=""></a>
-							</div>
-						</div>
-						<!--Block-->
-						<div class="partner-block">
-							<div class="image"><a href="#"><img src="assets/images/partners/partner-5.png" alt=""></a>
-							</div>
-						</div>
-						<!--Block-->
-						<div class="partner-block">
-							<div class="image"><a href="#"><img src="assets/images/partners/partner-1.png" alt=""></a>
-							</div>
-						</div>
-						<!--Block-->
-						<div class="partner-block">
-							<div class="image"><a href="#"><img src="assets/images/partners/partner-2.png" alt=""></a>
-							</div>
-						</div>
-						<!--Block-->
-						<div class="partner-block">
-							<div class="image"><a href="#"><img src="assets/images/partners/partner-3.png" alt=""></a>
-							</div>
-						</div>
-						<!--Block-->
-						<div class="partner-block">
-							<div class="image"><a href="#"><img src="assets/images/partners/partner-4.png" alt=""></a>
-							</div>
-						</div>
-						<!--Block-->
-						<div class="partner-block">
-							<div class="image"><a href="#"><img src="assets/images/partners/partner-5.png" alt=""></a>
-							</div>
-						</div>
-					</div>
-				</div>
-
-			</div>
-		</div>
-
+		
 		<!--Main Footer-->
 		<footer class="main-footer style-two">
 			<div class="upper-section">
@@ -717,13 +652,13 @@
 
 									<div class="footer-column col-lg-6 col-md-6 col-sm-12">
 										<div class="footer-widget links-widget">
-											<h4>Top Destination</h4>
+											<h4>Tour Categories</h4>
 											<div class="links">
 												<ul>
-													<li><a href="tour-packages.html">Adventure</a></li>
-													<li><a href="tour-packages.html">Cultural</a></li>
-													<li><a href="tour-packages.html">Nothern</a></li>
-													<li><a href="tour-packages.html">Wellness</a></li>
+													<li><a href="tour-packages.html/#category1">Adventure</a></li>
+													<li><a href="tour-packages.html/#category2">Cultural</a></li>
+													<li><a href="tour-packages.html/#category4">Nothern</a></li>
+													<li><a href="tour-packages.html/#category4">Wellness</a></li>
 													
 												</ul>
 											</div>
@@ -753,7 +688,7 @@
 									<h4>Safe Travel</h4>
 									<!--Logo-->
 									<div class="app-info">
-										<p class="Travel-text">Discover the wonders of Sri Lanka with our thoughtfully curated packages, offering adventure and wildlife experiences, cultural immersions, and rejuvenating wellness retreats, including the enchanting northern region. Whether you're seeking thrilling safaris, exploring rich heritage sites, or unwinding in tranquil settings, we have the perfect journey for you.</p>
+										<p class="Travel-text">Discover the wonders of Sri Lanka with Marvel Voyages. Whether you're seeking thrilling safaris, exploring rich heritage sites, or unwinding in tranquil settings, we have the perfect journey for you.</p>
 										<!--<div class="links">
 											<div class="link"><a href="#"><img src="assets/images/apple-store.png"
 														alt=""></a></div>
