--- a/t1_7daywildlife.html
+++ b/t1_7daywildlife.html
@@ -7,7 +7,7 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-	<title>Travel - 7 Day Wild Life Tour</title>
+	<title>Marvel Voyages - 7 Day Wild Life Tour</title>
 
 	<link href="assets/images/favicon.png" rel="shortcut icon" type="image/x-icon">
 
@@ -555,13 +555,13 @@
 
 									<div class="footer-column col-lg-6 col-md-6 col-sm-12">
 										<div class="footer-widget links-widget">
-											<h4>Top Destination</h4>
+											<h4>Tour Categories</h4>
 											<div class="links">
 												<ul>
-													<li><a href="tour-packages.html">Adventure</a></li>
-													<li><a href="tour-packages.html">Cultural</a></li>
-													<li><a href="tour-packages.html">Nothern</a></li>
-													<li><a href="tour-packages.html">Wellness</a></li>
+													<li><a href="tour-packages.html/#category1">Adventure</a></li>
+													<li><a href="tour-packages.html/#category2">Cultural</a></li>
+													<li><a href="tour-packages.html/#category4">Nothern</a></li>
+													<li><a href="tour-packages.html/#category4">Wellness</a></li>
 													
 												</ul>
 											</div>
@@ -591,7 +591,7 @@
 									<h4>Safe Travel</h4>
 									<!--Logo-->
 									<div class="app-info">
-										<p class="Travel-text">Discover the wonders of Sri Lanka with our thoughtfully curated packages, offering adventure and wildlife experiences, cultural immersions, and rejuvenating wellness retreats, including the enchanting northern region. Whether you're seeking thrilling safaris, exploring rich heritage sites, or unwinding in tranquil settings, we have the perfect journey for you.</p>
+										<p class="Travel-text">Discover the wonders of Sri Lanka with Marvel Voyages. Whether you're seeking thrilling safaris, exploring rich heritage sites, or unwinding in tranquil settings, we have the perfect journey for you.</p>
 										<!--<div class="links">
 											<div class="link"><a href="#"><img src="assets/images/apple-store.png"
 														alt=""></a></div>
