--- a/tour-packages.html
+++ b/tour-packages.html
@@ -7,7 +7,7 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-	<title>Travel - Tour Packages</title>
+	<title>Marvel Voyages - Tour Packages</title>
 
 	<link href="assets/images/favicon.png" rel="shortcut icon" type="image/x-icon">
 
@@ -35,7 +35,7 @@
 </head>
 
 <body>
-	<<div class="page-wrapper">
+	<div class="page-wrapper">
 		<!-- Preloader -->
 		<div class="loader-wrap">
 			<div class="preloader">
@@ -188,9 +188,9 @@
 		<!--Packages Section-->
 		<section class="packages-three" style="margin-top: 80px;">
 			<div class="auto-container">
-				<div class="title-box">
+				<div  class="title-box">
 					<div class="subtitle">Packages</div>
-					<h2><span>Adeventure and Wildlife Tour Packages</span></h2>
+					<h2 id="category1"><span>Adeventure and Wildlife Tour Packages</span></h2>
 				</div>
 				<div class="packages">
 
@@ -291,7 +291,7 @@
 			<div class="auto-container">
 				<div class="title-box">
 					<div class="subtitle">Packages</div>
-					<h2><span>Cultural Tour Packages</span></h2>
+					<h2 id="category2"><span>Cultural Tour Packages</span></h2>
 				</div>
 				<div class="packages">
 
@@ -392,7 +392,7 @@
 			<div class="auto-container">
 				<div class="title-box">
 					<div class="subtitle">Packages</div>
-					<h2><span>Nothern Beach Tour Packages</span></h2>
+					<h2 id="category3"><span>Nothern Beach Tour Packages</span></h2>
 				</div>
 				<div class="packages">
 
@@ -493,7 +493,7 @@
 			<div class="auto-container">
 				<div class="title-box">
 					<div class="subtitle">Packages</div>
-					<h2><span>Wellness Tour Packages</span></h2>
+					<h2 id="category4"><span>Wellness Tour Packages</span></h2>
 				</div>
 				<div class="packages">
 
@@ -625,13 +625,13 @@
 
 									<div class="footer-column col-lg-6 col-md-6 col-sm-12">
 										<div class="footer-widget links-widget">
-											<h4>Top Destination</h4>
+											<h4>Tour Categories</h4>
 											<div class="links">
 												<ul>
-													<li><a href="tour-packages.html">Adventure</a></li>
-													<li><a href="tour-packages.html">Cultural</a></li>
-													<li><a href="tour-packages.html">Nothern</a></li>
-													<li><a href="tour-packages.html">Wellness</a></li>
+													<li><a href="tour-packages.html/#category1">Adventure</a></li>
+													<li><a href="tour-packages.html/#category2">Cultural</a></li>
+													<li><a href="tour-packages.html/#category4">Nothern</a></li>
+													<li><a href="tour-packages.html/#category4">Wellness</a></li>
 													
 												</ul>
 											</div>
@@ -661,7 +661,7 @@
 									<h4>Safe Travel</h4>
 									<!--Logo-->
 									<div class="app-info">
-										<p class="Travel-text">Discover the wonders of Sri Lanka with our thoughtfully curated packages, offering adventure and wildlife experiences, cultural immersions, and rejuvenating wellness retreats, including the enchanting northern region. Whether you're seeking thrilling safaris, exploring rich heritage sites, or unwinding in tranquil settings, we have the perfect journey for you.</p>
+										<p class="Travel-text">Discover the wonders of Sri Lanka with Marvel Voyages. Whether you're seeking thrilling safaris, exploring rich heritage sites, or unwinding in tranquil settings, we have the perfect journey for you.</p>
 										<!--<div class="links">
 											<div class="link"><a href="#"><img src="assets/images/apple-store.png"
 														alt=""></a></div>
