--- a/t3_railwaynothern.html
+++ b/t3_railwaynothern.html
@@ -7,7 +7,7 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-	<title>Travel - Nothern Region Railway Tour</title>
+	<title>Marvel Voyages - Nothern Region Railway Tour</title>
 
 	<link href="assets/images/favicon.png" rel="shortcut icon" type="image/x-icon">
 
