--- a/about.html
+++ b/about.html
@@ -655,10 +655,10 @@
 											<h4>Tour Categories</h4>
 											<div class="links">
 												<ul>
-													<li><a href="tour-packages.html/#category1">Adventure</a></li>
-													<li><a href="tour-packages.html/#category2">Cultural</a></li>
-													<li><a href="tour-packages.html/#category4">Nothern</a></li>
-													<li><a href="tour-packages.html/#category4">Wellness</a></li>
+													<li><a href="tour-packages.html#category1">Adventure</a></li>
+													<li><a href="tour-packages.html#category2">Cultural</a></li>
+													<li><a href="tour-packages.html#category4">Nothern</a></li>
+													<li><a href="tour-packages.html#category4">Wellness</a></li>
 													
 												</ul>
 											</div>
@@ -708,7 +708,7 @@
 				<div class="auto-container">
 					<div class="inner clearfix">
 						<div class="copyright">
-							All rights reserved <strong>A.I Technologies Pvt Ltd</strong> &copy; <span id="year"></span>
+							<span>All rights reserved <strong>Marvel Voyages</strong> &copy; <span id="year"> </span> <span>Design by <strong><a href="https://aitech.lk/">A.I Tech</a></strong></span>
 						</div>
 					</div>
 				</div>
