--- a/contact.html
+++ b/contact.html
@@ -74,7 +74,7 @@
 							<ul class="info clearfix">
 								<li><i class="icon fa fa-envelope"></i> <a
 										href="mailto:hello@Travel.com">hello@Travel.com</a></li>
-								<li><i class="icon fa fa-map-marker-alt"></i> <a href="#">No 20, Kurudhuwatta Street, Colombo, Sri Lanka</a></li>
+								<li><i class="icon fa fa-map-marker-alt"></i> <a href="#">No 60, 2 nd Floor, Freedom Park, Minuwangoda.</a></li>
 							</ul>
 						</div>
 						<div class="top-right clearfix">
@@ -197,7 +197,7 @@
 									<li class="location">
 										<i class="icon fa fa-map-marker-alt"></i>
 										<h5>Location</h5>
-										<div class="travilo-text">No 20, Kurudhuwatta Street, Colombo, Sri Lanka</div>
+										<div class="travilo-text">No 60, 2 nd Floor, Freedom Park, Minuwangoda.</div>
 									</li>
 									<li class="phone">
 										<i class="icon fa-solid fa-phone"></i>
@@ -263,11 +263,14 @@
 					</div>
 				</div>
 
+				<!--Google Map-->
 				<div class="map-box">
-					<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d15843.339634667866!2d79.85610916150874!3d6.910334641337132!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3ae259708e3f327d%3A0x95516d47f161641b!2sKurunduwatta%2C%20Colombo!5e0!3m2!1sen!2slk!4v1725839736298!5m2!1sen!2slk" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+					<iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d15834.490709642358!2d79.9477458!3d7.1695421!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3ae2e53be77d966f%3A0x511af7a8e3142f0d!2sFreedom%20Park!5e0!3m2!1sen!2slk!4v1727675023301!5m2!1sen!2slk" 
+					width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
 
 					<div class="map-icon"><img src="assets/images/icons/map-marker.png" alt=""></div>
 				</div>
+				<!--Google Map-->
 
 			</div>
 		</section>
@@ -286,7 +289,7 @@
 									<div class="footer-info">
 										<ul class="info">
 											<li class="address"><a href="#"><i class="icon fa fa-map-marker-alt"></i>
-													No 20, Kurudhuwatta Street, Colombo, Sri Lanka</a></li>
+													No 60, 2 nd Floor, Freedom Park, Minuwangoda.</a></li>
 											<li class="phone"><a href="tel:+94 77 888 8888"><i
 														class="icon fa-solid fa-phone"></i>
 													+94 77 888 8888</a></li>
