--- a/t2_7daycultural.html
+++ b/t2_7daycultural.html
@@ -49,7 +49,7 @@
 							<ul class="info clearfix">
 								<li><i class="icon fa fa-envelope"></i> <a
 										href="mailto:hello@Travel.com">hello@Travel.com</a></li>
-								<li><i class="icon fa fa-map-marker-alt"></i> <a href="#">No 20, Kurudhuwatta Street, Colombo, Sri Lanka</a></li>
+								<li><i class="icon fa fa-map-marker-alt"></i> <a href="#">No 60, 2 nd Floor, Freedom Park, Minuwangoda.</a></li>
 							</ul>
 						</div>
 						<div class="top-right clearfix">
@@ -568,7 +568,7 @@
 									<div class="footer-info">
 										<ul class="info">
 											<li class="address"><a href="#"><i class="icon fa fa-map-marker-alt"></i>
-													No 20, Kurudhuwatta Street, Colombo, Sri Lanka</a></li>
+													No 60, 2 nd Floor, Freedom Park, Minuwangoda.</a></li>
 											<li class="phone"><a href="tel:+94 77 888 8888"><i
 														class="icon fa-solid fa-phone"></i>
 													+94 77 888 8888</a></li>
