--- a/index.html
+++ b/index.html
@@ -72,10 +72,11 @@
 						<div class="top-left clearfix">
 							<ul class="info clearfix">
 								<li><i class="icon fa fa-envelope"></i> <a
-										href="mailto:hello@Travel.com">hello@Travel.com</a></li>
+										href="mailto:info@marvelvoyages">info@marvelvoyages</a></li>
 								<li><i class="icon fa fa-map-marker-alt"></i> <a href="#">No 60, 2 nd Floor, Freedom Park, Minuwangoda.</a></li>
 							</ul>
 						</div>
+						<!--
 						<div class="top-right clearfix">
 							
 							<div class="social">
@@ -87,6 +88,7 @@
 								</ul>
 							</div>
 						</div>
+						-->
 					</div>
 				</div>
 			</div>
@@ -121,8 +123,8 @@
 
 							<div class="links-box clearfix">
 								<div class="link call-to">
-									<a href="tel:+94 77 888 8888"><i class="icon fa-solid fa-phone"></i> Call Us <span
-											class="nmbr">+94 77 888 8888</span></a>
+									<a href="tel:+94 76 619 5556"><i class="icon fa-solid fa-phone"></i> Call Us <span
+											class="nmbr">+94 76 619 5556</span></a>
 								</div>
 							</div>
 
@@ -184,7 +186,7 @@
 												<div class="Travel-text" style="color: white;">Disover top places and enjoy extreme
 													activities around the world with a cheap price.</div>
 												<div class="links-box clearfix">
-													<div class="link"><a href="about.html"
+													<div class="link"><a href="tour-packages.html"
 															class="theme-btn btn-style-two"><span>Explore
 																Now</span></a>
 													</div>
@@ -212,7 +214,7 @@
 												<h1><span>Beaches<i class="s-text">Beaches</i></span></h1>
 												<div class="Travel-text" style="color: white;">Discover serene shores and turquoise waters, perfect for sunbathing, swimming, and indulging in thrilling water sports while basking in breathtaking sunset views.</div>
 												<div class="links-box clearfix">
-													<div class="link"><a href="about.html"
+													<div class="link"><a href="tour-packages.html"
 															class="theme-btn btn-style-two"><span>Explore
 																Now</span></a>
 													</div>
@@ -240,7 +242,7 @@
 												<h1><span>History<i class="s-text">History</i></span></h1>
 												<div class="Travel-text" style="color: white;">Explore the rich cultural heritage, breathtaking landscapes, and timeless history of Sri Lanka on a journey you'll never forget.</div>
 												<div class="links-box clearfix">
-													<div class="link"><a href="about.html"
+													<div class="link"><a href="tour-packages.html"
 															class="theme-btn btn-style-two"><span>Explore
 																Now</span></a>
 													</div>
@@ -268,7 +270,7 @@
 												<h1><span>Wildlife<i class="s-text">Wildlife</i></span></h1>
 												<div class="Travel-text" style="color: white;">Embark on thrilling safaris and guided tours to witness Sri Lanka's diverse wildlife, from majestic elephants to elusive leopards, in their natural habitats.</div>
 												<div class="links-box clearfix">
-													<div class="link"><a href="about.html"
+													<div class="link"><a href="tour-packages.html"
 															class="theme-btn btn-style-two"><span>Explore
 																Now</span></a>
 													</div>
@@ -1019,10 +1021,10 @@
 			<!--Feed Row-->
 			<div class="insta-feed">
 				<div class="carousel-box">
-					<div class="insta-title">
+					<!--<div class="insta-title">
 						<h5>Follow Us <br>on Instagram</h5>
 						<div class="insta-user"><a href="#">@Travel</a></div>
-					</div>
+					</div>-->
 					<div class="insta-carousel-two">
 						<!--Block-->
 						<div class="insta-block">
@@ -1088,15 +1090,6 @@
 							</div>
 						</div>
 						
-						<!--Block-->
-						<div class="insta-block">
-							<div class="image">
-								<span class="img"><a href="assets/images/resources/instagram/1.jpg"
-										class="lightbox-image" data-fancybox="insta-gallery"><img
-											src="assets/images/resources/instagram/2.jpg"
-											alt=""></a></span>
-							</div>
-						</div>
 
 					</div>
 				</div>
@@ -1118,12 +1111,12 @@
 										<ul class="info">
 											<li class="address"><a href="#"><i class="icon fa fa-map-marker-alt"></i>
 												No 60, 2 nd Floor, Freedom Park, Minuwangoda.</a></li>
-											<li class="phone"><a href="tel:+94 77 888 8888"><i
+											<li class="phone"><a href="tel:+94 76 619 5556"><i
 														class="icon fa-solid fa-phone"></i>
-													+94 77 888 8888</a></li>
-											<li class="email"><a href="mailto:hello@Travel.com"><i
+													+94 76 619 5556</a></li>
+											<li class="email"><a href="mailto:info@marvelvoyages"><i
 														class="icon fa fa-envelope"></i>
-													hello@Travel.com</a></li>
+													info@marvelvoyages</a></li>
 										</ul>
 										<ul class="social-links clearfix">
 											<li><a href="#" class="facebook"><i class="fab fa-facebook-f"></i></a></li>
@@ -1195,7 +1188,7 @@
 				<div class="auto-container">
 					<div class="inner clearfix">
 						<div class="copyright">
-							<span>All rights reserved <strong>Marvel Voyages</strong> &copy; <span id="year"> </span> <span>Design by <strong><a href="https://aitech.lk/">A.I Tech</a></strong></span>
+							<span>All rights reserved <strong>Marvel Voyages</strong> &copy; <span id="year"> </span> <span>Design by <strong><a href="https://aitech.lk/" target="_blank">A.I Tech</a></strong></span>
 						</div>
 					</div>
 				</div>
