--- a/t2_7daycultural.html
+++ b/t2_7daycultural.html
@@ -48,10 +48,11 @@
 						<div class="top-left clearfix">
 							<ul class="info clearfix">
 								<li><i class="icon fa fa-envelope"></i> <a
-										href="mailto:hello@Travel.com">hello@Travel.com</a></li>
+										href="mailto:info@marvelvoyages">info@marvelvoyages</a></li>
 								<li><i class="icon fa fa-map-marker-alt"></i> <a href="#">No 60, 2 nd Floor, Freedom Park, Minuwangoda.</a></li>
 							</ul>
 						</div>
+						<!--
 						<div class="top-right clearfix">
 							
 							<div class="social">
@@ -63,6 +64,7 @@
 								</ul>
 							</div>
 						</div>
+						-->
 					</div>
 				</div>
 			</div>
@@ -98,7 +100,7 @@
 							<div class="links-box clearfix">
 								<div class="link call-to">
 									<a href="tel:+96899999000"><i class="icon fa-solid fa-phone"></i> Call Us <span
-											class="nmbr">+94 77 888 8888</span></a>
+											class="nmbr">+94 76 619 5556</span></a>
 								</div>
 							</div>
 
@@ -569,12 +571,12 @@
 										<ul class="info">
 											<li class="address"><a href="#"><i class="icon fa fa-map-marker-alt"></i>
 													No 60, 2 nd Floor, Freedom Park, Minuwangoda.</a></li>
-											<li class="phone"><a href="tel:+94 77 888 8888"><i
+											<li class="phone"><a href="tel:+94 76 619 5556"><i
 														class="icon fa-solid fa-phone"></i>
-													+94 77 888 8888</a></li>
-											<li class="email"><a href="mailto:hello@Travel.com"><i
+													+94 76 619 5556</a></li>
+											<li class="email"><a href="mailto:info@marvelvoyages"><i
 														class="icon fa fa-envelope"></i>
-													hello@Travel.com</a></li>
+													info@marvelvoyages</a></li>
 										</ul>
 										<ul class="social-links clearfix">
 											<li><a href="#" class="facebook"><i class="fab fa-facebook-f"></i></a></li>
@@ -646,7 +648,7 @@
 				<div class="auto-container">
 					<div class="inner clearfix">
 						<div class="copyright">
-							<span>All rights reserved <strong>Marvel Voyages</strong> &copy; <span id="year"> </span> <span>Design by <strong><a href="https://aitech.lk/">A.I Tech</a></strong></span>
+							<span>All rights reserved <strong>Marvel Voyages</strong> &copy; <span id="year"> </span> <span>Design by <strong><a href="https://aitech.lk/" target="_blank">A.I Tech</a></strong></span>
 						</div>
 					</div>
 				</div>
