--- a/contact.html
+++ b/contact.html
@@ -35,7 +35,7 @@
 </head>
 
 <body>
-	<<div class="page-wrapper">
+	<div class="page-wrapper">
 		<!-- Preloader -->
 		<div class="loader-wrap">
 			<div class="preloader">
@@ -73,10 +73,11 @@
 						<div class="top-left clearfix">
 							<ul class="info clearfix">
 								<li><i class="icon fa fa-envelope"></i> <a
-										href="mailto:hello@Travel.com">hello@Travel.com</a></li>
+										href="mailto:info@marvelvoyages">info@marvelvoyages</a></li>
 								<li><i class="icon fa fa-map-marker-alt"></i> <a href="#">No 60, 2 nd Floor, Freedom Park, Minuwangoda.</a></li>
 							</ul>
 						</div>
+						<!--
 						<div class="top-right clearfix">
 							
 							<div class="social">
@@ -88,6 +89,7 @@
 								</ul>
 							</div>
 						</div>
+						-->
 					</div>
 				</div>
 			</div>
@@ -123,7 +125,7 @@
 							<div class="links-box clearfix">
 								<div class="link call-to">
 									<a href="tel:+96899999000"><i class="icon fa-solid fa-phone"></i> Call Us <span
-											class="nmbr">+94 77 888 8888</span></a>
+											class="nmbr">+94 76 619 5556</span></a>
 								</div>
 							</div>
 
@@ -208,7 +210,9 @@
 										<i class="icon fa fa-envelope"></i>
 										<h5>Email</h5>
 										<div class="travilo-text"><a
-												href="mailto:hello@Travel.com">hello@Travel.com</a></div>
+												href="mailto:info@marvelvoyages">info@marvelvoyages</a></div>
+										<div class="travilo-text"><a
+												href="mailto:harshana@marvelvoyages">harshana@marvelvoyages</a></div>
 									</li>
 								</ul>
 							</div>
@@ -290,12 +294,12 @@
 										<ul class="info">
 											<li class="address"><a href="#"><i class="icon fa fa-map-marker-alt"></i>
 													No 60, 2 nd Floor, Freedom Park, Minuwangoda.</a></li>
-											<li class="phone"><a href="tel:+94 77 888 8888"><i
+											<li class="phone"><a href="tel:+94 76 619 5556"><i
 														class="icon fa-solid fa-phone"></i>
-													+94 77 888 8888</a></li>
-											<li class="email"><a href="mailto:hello@Travel.com"><i
+													+94 76 619 5556</a></li>
+											<li class="email"><a href="mailto:info@marvelvoyages"><i
 														class="icon fa fa-envelope"></i>
-													hello@Travel.com</a></li>
+													info@marvelvoyages</a></li>
 										</ul>
 										<ul class="social-links clearfix">
 											<li><a href="#" class="facebook"><i class="fab fa-facebook-f"></i></a></li>
@@ -367,7 +371,7 @@
 				<div class="auto-container">
 					<div class="inner clearfix">
 						<div class="copyright">
-							<span>All rights reserved <strong>Marvel Voyages</strong> &copy; <span id="year"> </span> <span>Design by <strong><a href="https://aitech.lk/">A.I Tech</a></strong></span>
+							<span>All rights reserved <strong>Marvel Voyages</strong> &copy; <span id="year"> </span> <span>Design by <strong><a href="https://aitech.lk/" target="_blank">A.I Tech</a></strong></span>
 						</div>
 					</div>
 				</div>
